# CPotree

./: .dockerignore  .gitignore  CMakeLists.txt  CPotree.ipynb  CPotree.sln  CPotree.vcxproj  CPotree.vcxproj.filters  Dockerfile  Dockerfile-aws  LICENSE  PotreeElevationProfile.vcxproj  PotreeExtractRegion.vcxproj  README.md  compile.sh
.github/workflows/: cmake.yml  main.yaml
docs/: invoke.py
docs/example_display/: cpotree_1.6.potree  cpotree_2.0.potree  cpotree_2.0_v1.potree  display.html  display_v1.html  display_v2.html
include/: Area.h  Attributes.h  CPotree.h  CsvWriter.h  JsonWriter.h  LasWriter.h  Node.h  Point.h  PointAttributes.h  PotreeFilters.h  PotreeLoader.h  PotreeReader.h  PotreeWriter.h  PotreeWriter_v1.h  PotreeWriter_v2.h  StandardIncludes.h  Writer.h  filter.h  pmath.h  stuff.h
libs/brotli/: CMakeLists.txt
modules/unsuck/: unsuck.hpp
scripts/: local-build.sh  make-package.sh
src/: PotreeReader.cpp  executable_extract_area.cpp  executable_extract_profile.cpp  main.cpp  main_elevation_profile.cpp  main_extract_region.cpp  pmath.cpp  test.cpp
